improve lit example

--- a/llvm-lit/example/lit.cfg
+++ b/llvm-lit/example/lit.cfg
@@ -3,6 +3,22 @@
 import sys
 import os
 sys.path.insert(0, os.path.dirname(__file__))
+
+""" SanitizerReports NOTE
+Shouldn't generate __pycache__/ManyTests.*.pyc
+otherwise lit will also recognize it as tests.
+"""
+sys.dont_write_bytecode = True
+
 import ManyTests
 
-config.test_format = ManyTests.ManyTests()
+""" SanitizerReports NOTE
+Here we use n_tests to control how many
+test entries will be generated.
+Or the screen will be flooded with
+too many "test-%04d".
+"""
+n_tests = 10
+
+config.name = "ManyTests_%d"%(n_tests)
+config.test_format = ManyTests.ManyTests(N=n_tests)
